# rtgogpu_assignments

./: .gitignore  CMakeLists.txt  README.md
doc/: depth_buffer.md  generate_depth_graph.py
particles_assignment/: CMakeLists.txt  instanced_cube.hpp  main.cpp  particle_system.cpp  particle_system.h  renderer.hpp  scene_definition.hpp
particles_assignment/shaders/: basic.vertex.glsl  compositing.fragment.glsl  compositing.program  generate_normals.geometry.glsl  generate_normals.vertex.glsl  instanced.fragment.glsl  instanced.vertex.glsl  linegizmo.program  linegizmo.vertex.glsl  material.fragment.glsl  material_deffered.fragment.glsl  normal_to_color.program  particle.fragment.glsl  particle.program  particle.vertex.glsl  pn_triangles.control.glsl  pn_triangles.evaluation.glsl  pn_triangles.vertex.glsl  shadowmap.fragment.glsl  shadowmap.program  shadowmap.vertex.glsl  solid_color.fragment.glsl  solid_color_shading.fragment.glsl  ssao.program
ssao_assignment/: CMakeLists.txt  main.cpp  renderer.hpp  scene_definition.hpp
ssao_assignment/shaders/: basic_instanced.vertex.glsl  color_shading.fragment.glsl  compositing.fragment.glsl  generate_normals.program  instanced.program  linegizmo.fragment.glsl  material.program  material_deffered.program  material_deffered.vertex.glsl  normal_to_color.fragment.glsl  passthrough.vertex.glsl  pn_triangles.program  pn_triangles_solid.program  solid_color.program  ssao.fragment.glsl  ssao.vertex.glsl  ssao_blur.fragment.glsl  ssao_blur.program
utils/: camera.hpp  cube.hpp  error_handling.hpp  framebuffer.hpp  geometry_factory.hpp  material_factory.hpp  mesh_object.hpp  obj_file_loading.cpp  obj_file_loading.hpp  ogl_geometry_construction.cpp  ogl_geometry_construction.hpp  ogl_geometry_factory.cpp  ogl_geometry_factory.hpp  ogl_material_factory.cpp  ogl_material_factory.hpp  ogl_resource.hpp  scene_object.hpp  shader.hpp  shadowmap_framebuffer.hpp  simple_scene.hpp  spotlight.hpp  texture.hpp  vertex.hpp  window.hpp
